<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="login_hint">email</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="welcome_label">Welcome To The Shoe Store</string>
    <string name="instructions">Click next to see the list of shoes</string>
    <string name="description_welcome">
        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which
        \n don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text.
        \nAll the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. \n
        It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. \n
        The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
    </string>
    <string name="next_btn_label">next</string>
    <string name="instructions_label">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_icon_description">shoe icon</string>
    <string name="fab_description">fab</string>
    <string name="shoe_list_description">Tap the button to add a new shoe</string>
    <string name="btn_save_text">save</string>
    <string name="btn_cancel_text">cancel</string>
    <string name="shoe_store_img">shoe store img</string>
    <string name="shoe_detail_name">Name: </string>
    <string name="shoe_detail_company">Company: </string>
    <string name="shoe_detail_size">Size: </string>
    <string name="shoe_detail_description">Description</string>
    <string name="detail_screen_label">Add a new shoe</string>
    <string name="login_img">Login img</string>
</resources>
