<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin">

        <ImageView
            android:id="@+id/iv_detail_img"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/shoe_store_img"
            android:src="@drawable/ic_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_screen_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_label">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_company"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_size"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_detail_description"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>